task_3/hw-task3-2-ingress-minio-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio-app
             port:
                number: 9001

  - http:
      paths:
      - path: /web/
        pathType: Prefix
        backend:
          service:
             name: my-nginx
             port:
                number: 80
